# MediaMaid

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
config/: config.example.yaml
deploy/: mediamaid.service
mediamaid/: __init__.py  cli.py  config.py  daemon.py  identify.py  logging_conf.py  models.py  naming.py  nfo.py  organizer.py  pipeline.py  store.py  subscribe.py  subscribe_filter.py  transfer.py  watcher.py
mediamaid/plugins/: __init__.py  base.py  deps.py  registry.py
mediamaid/plugins/downloader/: __init__.py  aria2.py  dummy.py  qbittorrent.py  transmission.py
mediamaid/plugins/mediaserver/: __init__.py  emby.py
mediamaid/plugins/notifier/: __init__.py  bark.py  log.py  webhook.py
mediamaid/plugins/parser/: __init__.py  guessit.py  regex.py
mediamaid/plugins/scraper/: __init__.py  noscrape.py  null.py  tmdb.py
mediamaid/plugins/subscriber/: __init__.py  rss.py
mediamaid/scraper/: __init__.py  base.py  tmdb.py
mediamaid/web/: __init__.py  app.py  auth.py  cfgio.py  deps.py  logbuf.py  schemas.py  serializers.py
mediamaid/web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: restart-web.sh
tests/: conftest.py  test_auth.py  test_config_reload.py  test_daemon.py  test_downloaders_new.py  test_dummy_downloader.py  test_identify.py  test_mediaserver.py  test_naming.py  test_nfo.py  test_parser.py  test_pipeline.py  test_qb_mapping.py  test_registry.py  test_rss_links.py  test_score_match.py  test_store.py  test_store_concurrency.py  test_store_episodes.py  test_subscribe.py  test_subscribe_episode.py  test_subscribe_filter.py  test_tmdb_cache.py  test_tmdb_extra.py  test_transfer.py  test_transfer_symlink.py  test_web.py
(+76 files in other folders)
