[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediamaid"
version = "0.1.0"
description = "监控源目录 → 识别资源 → 刮削元数据 → 整理到媒体库的自动化工具"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "guessit>=3.8",
    "watchdog>=3.0",
    "typer>=0.12",
    "pydantic>=2",
    "pydantic-settings>=2",
    "PyYAML>=6",
    "httpx>=0.27",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
mediamaid = "mediamaid.cli:app"

[tool.setuptools.packages.find]
include = ["mediamaid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
