[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediamaid"
version = "0.1.0"
description = "监控源目录 → 识别资源 → 刮削元数据 → 整理到媒体库的自动化工具"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "guessit>=3.8",
    "watchdog>=3.0",
    "typer>=0.12",
    "pydantic>=2",
    "pydantic-settings>=2",
    "PyYAML>=6",
    "httpx>=0.27",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# 示例插件的可选依赖（RSS 订阅 / qBittorrent 下载）
plugins = ["feedparser>=6", "qbittorrent-api>=2024"]
# Web UI 可选依赖（前端为预构建的 React 静态产物，运行无需 Node）
web = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
mediamaid = "mediamaid.cli:app"

# 外部包可通过该 entry_points 组提供插件（模块顶层用 @register 注册）
# [project.entry-points."mediamaid.plugins"]
# my-scraper = "my_pkg.scraper"

[tool.setuptools.packages.find]
include = ["mediamaid*"]

[tool.setuptools.package-data]
"mediamaid.web" = ["static/index.html", "static/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
